--- a/hr/mabany_attendance_manual_recalculate/views/recalculate_attendance_wizard.xml
+++ b/hr/mabany_attendance_manual_recalculate/views/recalculate_attendance_wizard.xml
@@ -5,7 +5,7 @@
             <field name="name">recalculate_attendance_wizard_form</field>
             <field name="model">recalculate.attendance.wizard</field>
             <field name="arch" type="xml">
-                <form string="">
+                <form string="Recalculate Attendance">
                     <sheet>
                         <group>
                             <field name="start_date" />
@@ -23,7 +23,7 @@
 
         <record id="recalculate_attendance_wizard_action" model="ir.actions.act_window">
             <field name="name">Recalculate Attendance</field>
-            <field name="type">ir.actions.act_window</field>
+<!--            <field name="type">ir.actions.act_window</field>-->
             <field name="res_model">recalculate.attendance.wizard</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
@@ -31,7 +31,7 @@
 
         <menuitem id="recalculate_attendance_menu"
                   groups="mabany_attendance_manual_recalculate.recalculate_attendance_group"
-                  name="Recalculate Attendance" parent="hr_attendance.menu_hr_attendance_attendances_overview" action="recalculate_attendance_wizard_action" />
+                  name="Recalculate Attendance" parent="hr_attendance.menu_hr_attendance_view_attendances" action="recalculate_attendance_wizard_action" />
 
 
     </data>
