--- a/hr/mabany_hr_custom/views/hr_employee_view.xml
+++ b/hr/mabany_hr_custom/views/hr_employee_view.xml
@@ -8,6 +8,7 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='parent_id']" position="after">
+                    <field name="manager_job"/>
                     <field name="job_level"/>
                     <field name="job_divison"/>
                 </xpath>
@@ -41,6 +42,7 @@
                     <field name="license_end_date"/>
                     <field name="identify_end_date"/>
                     <field name="military_status"/>
+                    <field name="military_end_date"/>
                 </field>
                 <field name="address_home_id" position="before">
                     <field name="private_address"/>
