--- a/hr/mabany_hr_self_service/views/hr_excuse.xml
+++ b/hr/mabany_hr_self_service/views/hr_excuse.xml
@@ -8,10 +8,17 @@
                 <form>
                     <header>
                         <field name="state" readonly="1" widget="statusbar"/>
+                                            <button string="First Approve" name="first_approve" type="object" class="oe_highlight"
+                    attrs="{'invisible': [ ('my_manager', '!=', True)]}"
+                    />
+                    <button string="Second Approve" groups="mabany_hr_self_service.group_second_approve_leave" name="second_approve" type="object" class="oe_highlight"/>
+
+
                         <button name="draft" type="object" string="Draft" states="approve,validate,refuse"/>
                         <button name="approve" type="object" string="Approve" class="oe_highlight" states="draft"/>
                         <button name="validate" type="object" string="Validate" class="oe_highlight" states="approve"/>
                         <button name="refuse" type="object" string="Refuse" states="approve,validate"/>
+
                     </header>
                     <sheet>
                         <group>
