--- a/hr/mabany_hr_self_service/views/hr_mission.xml
+++ b/hr/mabany_hr_self_service/views/hr_mission.xml
@@ -9,6 +9,13 @@
                     <header>
                         <field name="state" readonly="1" widget="statusbar"/>
 
+                        <field name="my_manager" invisible="1"/>
+
+                        <button string="First Approve" name="first_approve" type="object" class="oe_highlight"
+                                attrs="{'invisible': [ ('my_manager', '!=', True)]}"
+                        />
+                        <button string="Second Approve" groups="mabany_hr_self_service.group_second_approve_leave"
+                                name="second_approve" type="object" class="oe_highlight"/>
 
 
                         <button name="draft" type="object" string="Draft" states="approve,validate,refuse"/>
