--- a/hr/mabany_hr_self_service/views/hr_leave_inherit.xml
+++ b/hr/mabany_hr_self_service/views/hr_leave_inherit.xml
@@ -3,13 +3,15 @@
         <record id="view_hr_leave_inherit" model="ir.ui.view">
             <field name="name">view_hr_leave_inherit</field>
             <field name="model">hr.leave</field>
-            <field name="inherit_id" ref="hr_holidays.model_hr_leave"/>
+            <field name="inherit_id" ref="hr_holidays.hr_leave_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//header" position="inside">
-                    <button string="First Approve" name="first_approve" type="object" class="oe_highlight"
-                    attrs="{'invisible': [ ('my_manager', '!=', True)]}"
-                    />
-                    <button string="Second Approve" groups="mabany_hr_self_service.group_second_approve_leave" name="second_approve" type="object" class="oe_highlight"/>
+                    <field name="my_manager" invisible="1"/>
+                        <button string="First Approve" name="first_approve" type="object" class="oe_highlight"
+                                attrs="{'invisible': [ ('my_manager', '!=', True)]}"
+                        />
+                        <button string="Second Approve" groups="mabany_hr_self_service.group_second_approve_leave"
+                                name="second_approve" type="object" class="oe_highlight"/>
 
                 </xpath>
             </field>
