--- a/hr/mabany_hr_recruitment/views/hr_job.xml
+++ b/hr/mabany_hr_recruitment/views/hr_job.xml
@@ -8,6 +8,12 @@
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='recruitment']" position="inside">
                     <field name="budget"/>
+                    <field name="job_hired">
+                        <tree string="Job Hire" editable="bottom">
+                            <field name="date"/>
+                            <field name="count"/>
+                        </tree>
+                    </field>
                 </xpath>
             </field>
         </record>
