--- a/hr/mabany_hr_contract/views/hr_contract.xml
+++ b/hr/mabany_hr_contract/views/hr_contract.xml
@@ -17,7 +17,7 @@
                         <group>
                             <field name="other_earning"/>
                             <field name="house_allowance"/>
-                            <field name="parking_deduction"/>
+                            <field name="parking_allowance"/>
                             <field name="mobile_allowance"/>
                             <field name="work_nature_allowance"/>
                             <field name="profit_share"/>
