--- a/hr/mabany_portal_attendance/views/views.xml
+++ b/hr/mabany_portal_attendance/views/views.xml
@@ -8,7 +8,7 @@
             <field name="key">mabany_portal_attendance.attendances_partner_with_no_mail</field>
             <field name="arch" type="xml">
                 <t t-name="attendances_management_portal_users.attendances_partner_with_no_mail">
-                    <t t-call="website.layout">
+                    <t t-call="portal.portal_layout">
                         <div id="wrap">
                             <t t-raw="0"/>
                             <div class="oe_structure oe_empty">
@@ -25,7 +25,7 @@
 
         <!--attendance form-->
         <template id="my_attendance" name="My attendance">
-            <t t-call="website.layout">
+            <t t-call="portal.portal_layout">
                 <div id="wrap">
                     <div class="container">
                         <div class="oe_structure">
@@ -231,9 +231,7 @@
                         </table>
                     </div>
                 </form>
-                <div t-if="pager" class="o_portal_pager text-center">
-                    <t t-call="website.pager"/>
-                </div>
+
             </t>
         </template>
 
