--- a/hr/mabany_portal_termination/views/views.xml
+++ b/hr/mabany_portal_termination/views/views.xml
@@ -21,7 +21,7 @@
             <field name="key">mabany_portal_termination.terminations_partner_with_no_mail</field>
             <field name="arch" type="xml">
                 <t t-name="terminations_management_portal_users.terminations_partner_with_no_mail">
-                    <t t-call="website.layout">
+                    <t t-call="portal.portal_layout">
                         <div id="wrap">
                             <t t-raw="0"/>
                             <div class="oe_structure oe_empty">
@@ -38,7 +38,7 @@
 
         <!--termination form-->
         <template id="my_termination" name="My termination">
-            <t t-call="website.layout">
+            <t t-call="portal.portal_layout">
                 <div id="wrap">
                     <div class="container">
                         <div class="oe_structure">
@@ -262,9 +262,7 @@
                         </table>
                     </div>
                 </form>
-                <div t-if="pager" class="o_portal_pager text-center">
-                    <t t-call="website.pager"/>
-                </div>
+
             </t>
         </template>
 
