--- a/hr/mabany_hr_self_service/views/hr_leave_inherit.xml
+++ b/hr/mabany_hr_self_service/views/hr_leave_inherit.xml
@@ -21,5 +21,29 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="action_server_first_approve" model="ir.actions.server">
+            <field name="name">First Approve</field>
+            <field name="type">ir.actions.server</field>
+            <field name="binding_model_id" ref="hr_holidays.model_hr_leave" />
+            <field name="model_id" ref="hr_holidays.model_hr_leave" />
+            <field name="state">code</field>
+            <field name="code">
+                if records:
+                for rec in records:
+                    rec.first_approve()</field>
+        </record>
+
+        <record id="action_server_second_approve" model="ir.actions.server">
+            <field name="name">Second Approve</field>
+            <field name="type">ir.actions.server</field>
+            <field name="binding_model_id" ref="hr_holidays.model_hr_leave" />
+            <field name="model_id" ref="hr_holidays.model_hr_leave" />
+            <field name="state">code</field>
+            <field name="code">
+                if records:
+                for rec in records:
+                    rec.second_approve()</field>
+        </record>
     </data>
 </odoo>
