--- a/hr/mabany_hr_self_service/views/hr_excuse.xml
+++ b/hr/mabany_hr_self_service/views/hr_excuse.xml
@@ -47,6 +47,7 @@
                     <field name="employee_id"/>
                     <field name="start_date"/>
                     <field name="end_date"/>
+                    <field name="state" widget="badge"/>
                 </tree>
             </field>
         </record>
